<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txtTitle"
        android:textColor="#FF0000"
        android:textSize="50sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/car" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDescription"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/txtDeluxe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDeluxe"
        app:layout_constraintBottom_toTopOf="@+id/checkBox8"
        app:layout_constraintEnd_toStartOf="@+id/checkBox7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAuto" />

    <CheckBox
        android:id="@+id/txtGold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtGold"
        app:layout_constraintBottom_toTopOf="@+id/checkBox9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox6"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

    <CheckBox
        android:id="@+id/txtPremium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPremium"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/checkBox9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox6" />


    <CheckBox
        android:id="@+id/txtPaint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPaint" />

    <Button
        android:id="@+id/button"
        android:text="@string/btnDate"
        app:backgroundTint="#FB0000"></Button>

<!--    <Button-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Select Service"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        app:backgroundTint="#FB0000"-->
<!--        android:id="@+id/select_result"/>-->

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text=" "-->
<!--        android:id="@+id/final_result"/>-->

<!--    <Button-->
<!--        android:id="@+id/btnDate"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/btnDate"-->
<!--        app:backgroundTint="#FB0000" />-->



</TableLayout>